--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <div class="col-sm-6">
                             <div class="hero-img wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
                                 <div class="img-border">
-                                    <img src="assets/images/Hcom-image.jpg" alt=""  class="img-fluid">
+                                    <img src="assets/images/Hnet.com-image.jpg" alt=""  class="img-fluid">
                                 </div>
                             </div>
                         </div>
@@ -184,7 +184,7 @@
                                     <li><span>Javascript</span></li>
                                 </ul>
                             </div>
-                            <a href="#" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a>
+                            <a href="https://drive.google.com/file/d/1ddoiK-yeHWtCzgk8krqBtC4OxbMfzCv6/view?usp=drivesdk" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a>
                         </div>
                     </div>
                 </div>
