--- a/index.html
+++ b/index.html
@@ -788,9 +788,9 @@
                                             </div>
                                             
                                             <!-- Subject Button -->
-                                            <div class="btn-form col-sm-12">
-                                                <button type="submit" class="btn btn-fill btn-block" id="form-submit">Send Message</button>
-                                            </div>
+                                            <</div>
+                            <a href=" src="https://docs.google.com/forms/d/e/1FAIpQLSeYKMmEnhBadjWUTpR8kLQ-iQLT6wYVvOwLqbqhubdul3GL5g/viewform?embedded=true"" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a>
+                        </div>
                                         </div>
                                     </form>
                                 </div>
@@ -799,6 +799,11 @@
                                 <div id="mh-map" class="shadow-1"></div>
                             </div>
                         </div>
+
+<iframe width="640" height="942" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+
+
                                 <div class="col-sm-12 mh-copyright wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
                                     <div class="row">
                                         <div class="col-sm-6">
