--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                                     <li><a href="https://twitter.com/naman__mahi"><i class="fa fa-twitter"></i></a></li>
                                     <li><a href="https://github.com/naman-mahi"><i class="fa fa-github"></i></a></li>
                                     <li><a href="https://www.instagram.com/naman_khobragade/"><i class="fa fa-instagram"></i></a></li>
-<li><a href="https://www.instagram.com/naman_khobragade/"><i class="fa fa-telegram"></i></a></li>
-<li><a href="https://www.instagram.com/naman_khobragade/"><i class="fa fa-whatsapp"></i></a></li>
+<li><a href="https://t.me/SONU13189/"><i class="fa fa-telegram"></i></a></li>
+<li><a href="https://www.instagram.com/naman_khobragade/"><i class="fa-whatsapp"></i></a></li>
                                     <li><a href="https://www.linkedin.com/in/naman-khobragade-10b83a190/"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
