--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                                 <i class="fa fa-hourglass"></i>
                                 <h4>Hourley work</h4>
                                 <p>I am available for Hourley projets</p>
-                                <h5>₹50</h5>
+                                <h5>₹1</h5>
                                 <ul>
                                    <li>Web Development</li>
                                     <li>App Devlopment</li>
@@ -679,17 +679,15 @@
                             
                             <div class="each-client-item">
                                 <div class="mh-client-item dark-bg black-shadow-1">
-                                    <img src="assets/images/c-1.png" alt="" class="img-fluid">
-                                    <p>Absolute wonderful ! I am completely
-                                    blown away.The very best.I was amazed
-                                    at the quality</p>
+                                    <img src="assets/images/cc1.jpg" alt="" class="img-fluid">
+                                    <p>My new site created by Thrive just launched. They've done a great job of creating exactly what I wanted. Easy to work with and very responsive. They met all of my expectations and had a lot of insight regarding marketing tools I didn't know existed.</p>
                                     <h4>Yogesh Nagpurkar</h4>
                                     <span>CEO, Yogesh's Computer</span>
                                 </div>
                             </div>
                             <div class="each-client-item">
                                 <div class="mh-client-item dark-bg black-shadow-1">
-                                    <img src="assets/images/c-1.png" alt="" class="img-fluid">
+                                    <img src="assets/images/cc2.png" alt="" class="img-fluid">
                                     <p>Absolute wonderful ! I am completely
                                     blown away.The very best.I was amazed
                                     at the quality</p>
@@ -700,11 +698,9 @@
                             <div class="each-client-item">
                                 <div class="mh-client-item dark-bg black-shadow-1">
                                     <img src="assets/images/c-1.png" alt="" class="img-fluid">
-                                    <p>Absolute wonderful ! I am completely
-                                    blown away.The very best.I was amazed
-                                    at the quality</p>
-                                    <h4>Abhay Mahrashi</h4>
-                                    <span>Deputy Director NSTI Hyderabad </span>
+                                    <p>Naman listened to everything we needed and wanted in a new website, then delivered it! Our new website is fun, exciting and easy to use for me and our audiences. I have gone through website redesigns before, and by far, this one was the easiest and least painful. I was listened to and respected through every step. We couldn't be happier with our new website. </p>
+                                    <h4>Suresh Traders </h4>
+                                    <span>Owner Of Suresh Traders</span>
                                 </div>
                             </div>                    
                 
