--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                         <div class="col-sm-12 col-md-6">
                             <div class="mh-professional-skills wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
                                
-                                <ul class="mh-professional-progress">
+                               <h3><br></h3> <ul class="mh-professional-progress">
                                     <li>
                                         <div class="mh-progress mh-progress-circle" data-progress="75"></div>
                                         <div class="pr-skill-name">Communication</div>
