--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                 <div class="container">
                     <div class="row section-separator">
                         <div class="section-title text-center col-sm-12">
-                            <!--<h2>Skills</h2>-->
+                            <h2>Strength</h2>
                         </div>
 
 <div class="col-sm-12 col-md-6">
