--- a/index.html
+++ b/index.html
@@ -751,6 +751,38 @@ Design is very important and should be simple.</p>
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-4">
+                            <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
+                                <img src="assets/images/b-2.png" alt="" class="img-fluid">
+                                <div class="blog-inner">
+                                    <h2><a href="blog-single.html">Proportion are what’s really needed</a></h2>
+                                    <div class="mh-blog-post-info">
+                                        <ul>
+                                            <li><strong>Post On</strong><a href="">24.11.19</a></li>
+                                            <li><strong>By</strong><a href="">ThemeSpiders</a></li>
+                                        </ul>
+                                    </div>
+                                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
+                                    <a href="blog-single.html">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
+                                <img src="assets/images/b-2.png" alt="" class="img-fluid">
+                                <div class="blog-inner">
+                                    <h2><a href="blog-single.html">Proportion are what’s really needed</a></h2>
+                                    <div class="mh-blog-post-info">
+                                        <ul>
+                                            <li><strong>Post On</strong><a href="">24.11.19</a></li>
+                                            <li><strong>By</strong><a href="">ThemeSpiders</a></li>
+                                        </ul>
+                                    </div>
+                                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
+                                    <a href="blog-single.html">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
                             <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                                 <img src="assets/images/b-1.png" alt="" class="img-fluid">
                                 <div class="blog-inner">
