Color customization comments

--- a/index.html
+++ b/index.html
@@ -1230,7 +1230,7 @@ Design is very important and should be simple.</p>
       JavaScript/jQuery according to http://browserdiet.com/en/ for better performance
     **************** -->
     <!-- STYLE SWITCH STYLESHEET ONLY FOR DEMO -->
-    <link rel="stylesheet" href="demo/demo.css">
+   <!-- <link rel="stylesheet" href="demo/demo.css">
     <script type="text/javascript" src="demo/styleswitcher.js"></script>
     <script type="text/javascript" src="demo/demo.js"></script>
         <div class="demo-style-switch" id="switch-style">
@@ -1302,7 +1302,7 @@ Design is very important and should be simple.</p>
         </li>
     </ul>
     </div>
-    </div>
+    </div>-->
     
 
 <!--Start of Tawk.to Script-->
