Social media added

--- a/index.html
+++ b/index.html
@@ -1169,16 +1169,18 @@ Design is very important and should be simple.</p>
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="text-left text-xs-center">
-                                        <p>All right reserved Siful Islam @ 2018</p>
+                                        <p>All right reserved Naman K . Khobragade @2021</p>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
-                                    <ul class="social-icon">
-                                        <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href=""><i class="fa fa-github"></i></a></li>
-                                        <li><a href=""><i class="fa fa-dribbble"></i></a></li>
-                                    </ul>
+                                <ul class="social-icon wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
+                                    <li><a href="https://m.facebook.com/naman.k.khobragade.7"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://twitter.com/naman__mahi"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="https://github.com/naman-mahi"><i class="fa fa-github"></i></a></li>
+                                    <li><a href="https://www.instagram.com/naman_khobragade/"><i class="fa fa-instagram"></i></a></li>
+<li><a href="https://t.me/SONU13189"><i class="fa fa-telegram"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/naman-khobragade-10b83a190/"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
                                 </div>
                             </div>
                         </div>
