--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="#mh-about">About</a>
                                 </li>
+         <li class="nav-item">
+                                    <a class="nav-link" href="#mh-blog">Features Project</a>
+                                </li>
                                 <li class="nav-item">
                                    <a class="nav-link" href="#mh-skills">Skills</a>
                                 </li>                                
@@ -95,11 +98,9 @@
                                     <a class="nav-link" href="#mh-portfolio">Portfolio</a>
                                 </li>                               
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#mh-pricing">Pricing</a>
+                                    <a class="nav-link" href="#mh-pricing">Achievements</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#mh-blog">Blog</a>
-                                </li>
+                       
                                 <li class="nav-item">
                                    <a class="nav-link" href="#mh-contact">Contact</a>
                                 </li>
@@ -271,16 +272,16 @@
                                                 <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">View Details</a>
                                                 <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
                                                     <blockquote>
-                                                        <q>Excellent Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                                        <cite>- B Lingaiah</cite>
+                                                     <!--   <q>Excellent Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
+                                                        <cite>- B Lingaiah</cite>-->
                                                     </blockquote>
                                                     <blockquote>
-                                                        <q>Creative Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                                        <cite>- B Lingaiah </cite>
+                                                     <!-- <q>Creative Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
+                                                        <cite>- B Lingaiah </cite>-->
                                                     </blockquote>
                                                     <blockquote>
-                                                        <q>Organize Code - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
-                                                        <cite>- Yogesh Computer </cite>
+                                                      <!--  <q>Organize Code - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
+                                                        <cite>- Yogesh Computer </cite>-->
                                                     </blockquote>
                                                 </div>
                                             </div>
@@ -304,7 +305,7 @@
 Interactivity is not as deep as Spotify, for example, but needs to have remote support, streaming and local download of songs (encrypted); social network, own playlists / jukebox.
 Design is very important and should be simple.</p>
                                                 <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">View Details</a>
-                                                <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
+                                            <!--    <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
                                                     <blockquote>
                                                         <q>Excellent Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
                                                         <cite>- Shane Kavanagh</cite>
@@ -317,7 +318,7 @@ Design is very important and should be simple.</p>
                                                         <q>Organize Code - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
                                                         <cite>- Shane Kavanagh</cite>
                                                     </blockquote>
-                                                </div>
+                                                </div>-->
                                             </div>
                                         </div>
                                     </div>
@@ -340,7 +341,7 @@ Design is very important and should be simple.</p>
                                                 It has 4 background styles with 6 homepage styles. 6 pre-defined color scheme. 
                                                 All variations are organized separately so you can use / customize the template very easily.</p>
                                                 <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">View Details</a>
-                                                <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
+                                            <!--    <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
                                                     <blockquote>
                                                         <q>Excellent Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
                                                         <cite>- Shane Kavanagh</cite>
@@ -353,7 +354,7 @@ Design is very important and should be simple.</p>
                                                         <q>Organize Code - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
                                                         <cite>- Shane Kavanagh</cite>
                                                     </blockquote>
-                                                </div>
+                                                </div>-->
                                             </div>
                                         </div>
                                     </div>
