--- a/index.html
+++ b/index.html
@@ -288,6 +288,73 @@
                                         </div>
                                     </div>
                                 </div>
+                                
+                               <!-- Project Items -->
+                                <div class="col-sm-12 mh-featured-item">
+                                    <div class="row">
+                                        <div class="col-sm-7">
+                                            <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
+                                                <img src="assets/images/p-2.png" alt="" class="img-fluid">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-5">
+                                            <div class="mh-featured-project-content">
+                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web Design</h4>
+                                                <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Online Exam Portal</h2>
+                                                <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Design & Development</span>
+                                                <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Online Exam Portal project has been made very interactive keeping in mind its re usability and user friendliness. The project has been developed using PHP as a front end and MYSQL SERVER as back end. The user is provided with a database where the information is stored and can be retrieved any time when required. Security is maintained for the system, there is a User Name and Password for an authorized person only that person can access the data in the system..</p>
+                                                <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">View Details</a>
+                                                <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
+                                                    <blockquote>
+                                                     <!--   <q>Excellent Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
+                                                        <cite>- B Lingaiah</cite>-->
+                                                    </blockquote>
+                                                    <blockquote>
+                                                     <!-- <q>Creative Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
+                                                        <cite>- B Lingaiah </cite>-->
+                                                    </blockquote>
+                                                    <blockquote>
+                                                      <!--  <q>Organize Code - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
+                                                        <cite>- Yogesh Computer </cite>-->
+                                                    </blockquote>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                   <!-- Project Items -->
+                                <div class="col-sm-12 mh-featured-item">
+                                    <div class="row">
+                                        <div class="col-sm-7">
+                                            <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
+                                                <img src="assets/images/p-2.png" alt="" class="img-fluid">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-5">
+                                            <div class="mh-featured-project-content">
+                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web Design</h4>
+                                                <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Online Exam Portal</h2>
+                                                <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Design & Development</span>
+                                                <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Online Exam Portal project has been made very interactive keeping in mind its re usability and user friendliness. The project has been developed using PHP as a front end and MYSQL SERVER as back end. The user is provided with a database where the information is stored and can be retrieved any time when required. Security is maintained for the system, there is a User Name and Password for an authorized person only that person can access the data in the system..</p>
+                                                <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">View Details</a>
+                                                <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
+                                                    <blockquote>
+                                                     <!--   <q>Excellent Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
+                                                        <cite>- B Lingaiah</cite>-->
+                                                    </blockquote>
+                                                    <blockquote>
+                                                     <!-- <q>Creative Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
+                                                        <cite>- B Lingaiah </cite>-->
+                                                    </blockquote>
+                                                    <blockquote>
+                                                      <!--  <q>Organize Code - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
+                                                        <cite>- Yogesh Computer </cite>-->
+                                                    </blockquote>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <!-- Project Items -->
                                 <div class="col-sm-12 mh-featured-item">
                                     <div class="row">
