--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                                     <div class="row">
                                         <div class="col-sm-7">
                                             <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                                <img src="assets/images/p-2.png" alt="" class="img-fluid">
+                                                <img src="assets/images/pf1.png" alt="" class="img-fluid">
                                             </div>
                                         </div>
                                         <div class="col-sm-5">
@@ -294,7 +294,7 @@
                                     <div class="row">
                                         <div class="col-sm-7">
                                             <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                                <img src="assets/images/p-2.png" alt="" class="img-fluid">
+                                                <img src="assets/images/pf2.png" alt="" class="img-fluid">
                                             </div>
                                         </div>
                                         <div class="col-sm-5">
@@ -327,7 +327,7 @@
                                     <div class="row">
                                         <div class="col-sm-7">
                                             <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                                <img src="assets/images/p-2.png" alt="" class="img-fluid">
+                                                <img src="assets/images/pf3.jpg" alt="" class="img-fluid">
                                             </div>
                                         </div>
                                         <div class="col-sm-5">
@@ -360,7 +360,43 @@
                                     <div class="row">
                                         <div class="col-sm-7">
                                             <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                                <img src="assets/images/p-2.png" alt="" class="img-fluid">
+                                                <img src="assets/images/pf4.png" alt="" class="img-fluid">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-5">
+                                            <div class="mh-featured-project-content">
+                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web Design</h4>
+                                                <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Music Player</h2>
+                                                <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Design & Development</span>
+                                                <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">The main functionality is a music player, that should be integrated with a proprietary platform. It´s scope is B2B, going to be used for music in store (mainly).
+Interactivity is not as deep as Spotify, for example, but needs to have remote support, streaming and local download of songs (encrypted); social network, own playlists / jukebox.
+Design is very important and should be simple.</p>
+                                                <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">View Details</a>
+                                            <!--    <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
+                                                    <blockquote>
+                                                        <q>Excellent Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
+                                                        <cite>- Shane Kavanagh</cite>
+                                                    </blockquote>
+                                                    <blockquote>
+                                                        <q>Creative Template - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
+                                                        <cite>- Shane Kavanagh</cite>
+                                                    </blockquote>
+                                                    <blockquote>
+                                                        <q>Organize Code - suits my needs perfectly whilst allowing me to learn some new technology first hand.</q>
+                                                        <cite>- Shane Kavanagh</cite>
+                                                    </blockquote>
+                                                </div>-->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+     <!-- Project Items -->
+                                <div class="col-sm-12 mh-featured-item">
+                                    <div class="row">
+                                        <div class="col-sm-7">
+                                            <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
+                                                <img src="assets/images/pf5.png" alt="" class="img-fluid">
                                             </div>
                                         </div>
                                         <div class="col-sm-5">
@@ -395,7 +431,7 @@ Design is very important and should be simple.</p>
                                     <div class="row">
                                         <div class="col-sm-7">
                                             <div class="mh-featured-project-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
-                                                <img src="assets/images/p-2.png" alt="" class="img-fluid">
+                                                <img src="assets/images/pf6.png" alt="" class="img-fluid">
                                             </div>
                                         </div>
                                         <div class="col-sm-5">
