--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                         </div>
                                         <div class="col-sm-5">
                                             <div class="mh-featured-project-content">
-                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web Design</h4>
+                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">App Design</h4>
                                                 <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Online Exam Portal</h2>
                                                 <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Design & Development</span>
                                                 <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Online Exam Portal project has been made very interactive keeping in mind its re usability and user friendliness. The project has been developed using PHP as a front end and MYSQL SERVER as back end. The user is provided with a database where the information is stored and can be retrieved any time when required. Security is maintained for the system, there is a User Name and Password for an authorized person only that person can access the data in the system..</p>
@@ -401,11 +401,11 @@
                                         </div>
                                         <div class="col-sm-5">
                                             <div class="mh-featured-project-content">
-                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">App Design</h4>
+                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web Design</h4>
                                                 <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Online Exam Portal</h2>
                                                 <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Design & Development</span>
 <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Online Objective Examination System(OOES) is a web application developed using Node.js platform and a lightweight Node.js framework Express.js. The templating engine used is Jade and the database used is MongoDB. <br>
-The Admin is allowed to add, edit and delete Student and Faculty users. They can also add, edit and delete Courses. In addition to this, they can register a Student to a particular course and deregister him from the same. The Admin can also assign a course to a Faculty and deassign him from the same. Admin users are directly managed using the database and cannot be created or deleted through the Application.</p>       
+The Admin is allowed to add, edit and delete Student and Faculty users. They can also add, edit and delete Courses. In addition to this, they can register a Student to a particular course and deregister him from the same. The Admin can also assign a course to a Faculty and deassign him from the same. Admin users are directly managed using the database and cannot be created or deleted through the Software.</p>       
       
                                                 <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">View Details</a>
                                             <!--    <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
@@ -436,11 +436,11 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                                         </div>
                                         <div class="col-sm-5">
                                             <div class="mh-featured-project-content">
-                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Web Design</h4>
-                                                <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Wrap</h2>
+                                                <h4 class="project-category wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">App Design</h4>
+                                                <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">Online Exam app</h2>
                                                 <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">Design & Development</span>
 <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">Online Objective Examination System(OOES) is a web application developed using Node.js platform and a lightweight Node.js framework Express.js. The templating engine used is Jade and the database used is MongoDB. <br>
-The Admin is allowed to add, edit and delete Student and Faculty users. They can also add, edit and delete Courses. In addition to this, they can register a Student to a particular course and deregister him from the same. The Admin can also assign a course to a Faculty and deassign him from the same. Admin users are directly managed using the database and cannot be created or deleted through the software.</p>       
+The Admin is allowed to add, edit and delete Student and Faculty users. They can also add, edit and delete Courses. In addition to this, they can register a Student to a particular course and deregister him from the same. The Admin can also assign a course to a Faculty and deassign him from the same. Admin users are directly managed using the database and cannot be created or deleted through the Application.</p>       
       
                                                 <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">View Details</a>
                                             <!--    <div class="mh-testimonial mh-project-testimonial wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.9s">
