--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                         </div>
                         <div class="col-sm-12 col-md-4">
                              <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                <img src="assets/images/b-3.png" alt="" class="img-fluid">
+                                <img src="assets/images/b1.jpg" alt="" class="img-fluid">
                                 <div class="blog-inner">
                                     <h2><a href="blog-single.html">A life without the daily traffic jams</a></h2>
                                     <div class="mh-blog-post-info">
@@ -1018,7 +1018,7 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                         </div>
                         <div class="col-sm-12 col-md-4">
                              <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                <img src="assets/images/b-3.png" alt="" class="img-fluid">
+                                <img src="assets/images/b2.jpg" alt="" class="img-fluid">
                                 <div class="blog-inner">
                                     <h2><a href="blog-single.html">A life without the daily traffic jams</a></h2>
                                     <div class="mh-blog-post-info">
@@ -1034,7 +1034,7 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                         </div>
                         <div class="col-sm-12 col-md-4">
                              <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                <img src="assets/images/b-3.png" alt="" class="img-fluid">
+                                <img src="assets/images/b3.jpg" alt="" class="img-fluid">
                                 <div class="blog-inner">
                                     <h2><a href="blog-single.html">A life without the daily traffic jams</a></h2>
                                     <div class="mh-blog-post-info">
@@ -1050,7 +1050,7 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                         </div>
                         <div class="col-sm-12 col-md-4">
                              <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                <img src="assets/images/b-3.png" alt="" class="img-fluid">
+                                <img src="assets/images/b4.jpg" alt="" class="img-fluid">
                                 <div class="blog-inner">
                                     <h2><a href="blog-single.html">A life without the daily traffic jams</a></h2>
                                     <div class="mh-blog-post-info">
@@ -1066,7 +1066,7 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                         </div>  
                         <div class="col-sm-12 col-md-4">
                             <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                                <img src="assets/images/b-2.png" alt="" class="img-fluid">
+                                <img src="assets/images/b5.jpg" alt="" class="img-fluid">
                                 <div class="blog-inner">
                                     <h2><a href="blog-single.html">Proportion are what’s really needed</a></h2>
                                     <div class="mh-blog-post-info">
