--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                             <div class="portfolioContainer row">
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
                                     <figure>
-                                        <img src="assets/images/portfolio/g1.jpg" alt="img04">
+                                        <img src="assets/images/portfolio/g1.png" alt="img04">
                                         <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">Creative Design</h5>
