--- a/index.html
+++ b/index.html
@@ -890,12 +890,12 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                                 </div>
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
                                     <figure>
-                                        <img src="assets/images/portfolio/g4.png" alt="img04">
+                                        <img src="assets/images/portfolio/g4.jpg" alt="img04">
                                         <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">Creative Design</h5>
                                             <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g4.png" data-fancybox data-src="#mh"></a>
+                                            <a href="assets/images/portfolio/g4.jpg" data-fancybox data-src="#mh"></a>
                                         </figcaption>
                                     </figure>
                                 </div>
