--- a/index.html
+++ b/index.html
@@ -879,12 +879,12 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                                 </div>
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
                                     <figure>
-                                        <img src="assets/images/portfolio/g5.png" alt="img04">
+                                        <img src="assets/images/portfolio/g5.jpg" alt="img04">
                                         <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">Creative Design</h5>
                                             <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g5.png" data-fancybox data-src="#mh"></a>
+                                            <a href="assets/images/portfolio/g5.jpg" data-fancybox data-src="#mh"></a>
                                         </figcaption>
                                     </figure>
                                 </div>
@@ -901,12 +901,12 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                                 </div>
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
                                     <figure>
-                                        <img src="assets/images/portfolio/g6.png" alt="img04">
+                                        <img src="assets/images/portfolio/g6.jpg" alt="img04">
                                         <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">Creative Design</h5>
                                             <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g6.png" data-fancybox data-src="#mh"></a>
+                                            <a href="assets/images/portfolio/g6.jpg" data-fancybox data-src="#mh"></a>
                                         </figcaption>
                                     </figure>
                                 </div>
