--- a/dark.html
+++ b/dark.html
@@ -53,7 +53,7 @@
         <link rel="alternate stylesheet" href="assets/css/colors/yellow.css" title="yellow">
         
     </head>
-    <body class="white-vertion black-bg">
+    <body class="dark-vertion black-bg">
         
         <!-- Start Loader -->
         <div class="section-loader">
