--- a/index.html
+++ b/index.html
@@ -1306,8 +1306,8 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                                         <div class="each-info">
                                             <h4>Address</h4>
                                             <address>
-                                                5th Avenue, 34th floor, <br> 
-                                                 New york
+                                                #480, Gondia, Maharashtra, <br> 
+                                                 IN
                                             </address>
                                         </div>
                                     </div>
@@ -1319,8 +1319,8 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                                         </div>
                                         <div class="each-info">
                                             <h4>Email</h4>
-                                            <a href="mailto:yourmail@email.com">yourmail@email.com</a><br>
-                                            <a href="mailto:yourmail@email.com">yourmail@email.com</a>
+                                            <a href="mailto:skhobragade993@gmail.com">skhobragade993@gmail.com</a><br>
+                                            <a href="mailto:naman.k@programmer.net">naman.k@programmer.net</a>
                                         </div>
                                     </div>
                                 </div>
@@ -1331,8 +1331,8 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                                         </div>
                                         <div class="each-info">
                                             <h4>Phone</h4>
-                                            <a href="callto:(880)-8976-987">(880)-8976-987</a><br>
-                                            <a href="callto:(880)-8976-987">(880)-8976-987</a>
+                                            <a href="callto:+917498950562">+91-749-895-0562</a><br>
+                                            <a href="callto:+919145701266">+91-914-570-1266</a>
                                         </div>
                                     </div>
                                 </div>
