--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
                                    <a class="nav-link" href="#mh-experience">Project</a> </li>                                
                                 <li class="nav-item">
                                     <a class="nav-link" href="#mh-portfolio">Portfolio</a>
-                                </li>                               
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#mh-pricing">Achievements</a>
+                                </li>  
+    <li class="nav-item">
+                                    <a class="nav-link" href="#mh-badge">Badges</a>
+                                </li>                                <li class="nav-item">
+                                    <a class="nav-link" href="#mh-achivements">Achievements</a>
                                 </li>
                        
                                 <li class="nav-item">
@@ -993,7 +995,7 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
            BLOG
         ===================
         -->
-        <section class="mh-blog image-bg featured-img-two" id="mh-blog">
+        <section class="mh-badge image-bg featured-img-two" id="mh-badge">
             <div class="img-color-overlay">
                 <div class="container">
                     <div class="row section-separator">
@@ -1086,7 +1088,7 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
            PRICING
         ===================
         -->
-        <section class="mh-pricing" id="mh-pricing">
+        <section class="mh-achivements" id="mh-achivements">
             <div class="">
                 <div class="container">
                     <div class="row section-separator">
