--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                                     <a class="nav-link" href="#mh-portfolio">Portfolio</a>
                                 </li>  
     <li class="nav-item">
-                                    <a class="nav-link" href="#mh-badge">Badges</a>
+                                    <a class="nav-link" href="#mh-blog">Badges</a>
                                 </li>                                <li class="nav-item">
-                                    <a class="nav-link" href="#mh-achivements">Achievements</a>
+                                    <a class="nav-link" href="#mh-pricing">Achievements</a>
                                 </li>
                        
                                 <li class="nav-item">
@@ -995,7 +995,7 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
            BLOG
         ===================
         -->
-        <section class="mh-badge image-bg featured-img-two" id="mh-badge">
+        <section class="mh-blog image-bg featured-img-two" id="mh-blog">
             <div class="img-color-overlay">
                 <div class="container">
                     <div class="row section-separator">
@@ -1088,7 +1088,7 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
            PRICING
         ===================
         -->
-        <section class="mh-achivements" id="mh-achivements">
+        <section class="mh-pricing" id="mh-pricing">
             <div class="">
                 <div class="container">
                     <div class="row section-separator">
