--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <div class="col-sm-6">
                             <div class="hero-img wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
                                 <div class="img-border">
-                                    <img src="assets/images/Hnet.com-image.jpg" alt=""  class="img-fluid">
+                                    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fqph.fs.quoracdn.net%2Fmain-qimg-fa7b4bdc3b2f73e749e5c2c646d4ae13&imgrefurl=https%3A%2F%2Fwww.quora.com%2FWhat-is-the-best-institute-for-web-designing&docid=OUDkdvLOOjsUwM&tbnid=YX-6heqmtoyG0M&vet=1&source=sh%2Fx%2Fim" alt=""  class="img-fluid">
                                 </div>
                             </div>
                         </div>
