--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <link rel="alternate stylesheet" href="assets/css/colors/yellow.css" title="yellow">
         
     </head>
-    <body class="white-vertion black-bg">
+    <body class="white-vertion black-bg"style="background-image: url('https://github.com/k-naman/naman/blob/main/images/animation.mp4');">
         
         <!-- Start Loader -->
         <div class="section-loader">
