--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
             </div>
         </div>
         <!-- End Loader -->
-        
-        <!--
+<video autoplay muted loop id="myVideo">
+  <source src="/images/animation.mp4" type="video/mp4">
+  Video
+</video>        <!--
         ===================
            NAVIGATION
         ===================
