--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
         <!-- Custom CSS-->
         <link rel="stylesheet" href="assets/css/styles.css">
-        <link rel="stylesheet" href="assets/css/responsive.css">
+  <link rel="stylesheet" href="assets/css/styless.css">        <link rel="stylesheet" href="assets/css/responsive.css">
         
         <!-- Colors -->
         <link rel="alternate stylesheet" href="assets/css/colors/blue.css" title="blue">
