--- a/index.html
+++ b/index.html
@@ -1180,9 +1180,9 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                         </div>
                         <div class="col-sm-12 col-md-4">
                             <div class="mh-pricing dark-bg shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-              <div class="candidatos">
+              <div class="candidatos"> <h4>Language </h4>
                                             <div class="parcial">
-                                                <div class="info"> <h4>Language </h4>
+                                                <div class="info">
                                                     <div class="nome">English</div>
                                                     <div class="percentagem-num">46%</div>
                                                 </div>
