--- a/index.html
+++ b/index.html
@@ -1618,7 +1618,8 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
     </div>
     </div>-->
     
-
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-b93ccda6-0c35-4f7b-964a-9d3167a65e6e"></div>
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
